# TraderHub

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-run.sh
.github/workflows/: build.yml
OrderClientServer/: CMakeLists.txt
OrderClientServer/data/: orders.json
OrderClientServer/include/: order_client.server.hpp  order_client_server.hpp  order_service.hpp  order_types.hpp
OrderClientServer/protos/: order_service.proto
OrderClientServer/src/: main.cpp  order_client.cpp  order_client_main.cpp  order_client_server.cpp  order_service.cpp
OrderClientServer/tests/: order_client_server_tests.cpp
TradingEngine/: CMakeLists.txt  README.md
TradingEngine/cmake/: TradingEngineConfig.cmake.in
TradingEngine/include/: order.hpp  order_book.hpp  prioritizable_value_st.hpp  trade.hpp  trader.hpp
TradingEngine/src/: order.cpp  order_book.cpp  prioritizable_value_st.cpp  trade.cpp  trader.cpp
TradingEngine/tests/integration/: integration_tests.cpp
TradingEngine/tests/performance/: performance_tests.cpp
TradingEngine/tests/unit/: order_book_tests.cpp  order_tests.cpp  trade_tests.cpp  trader_tests.cpp
